--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -60,5 +60,26 @@
   "error": "Error: {message}",
   "tabTasks": "Tasks",
   "tabHome": "Home",
-  "tabPenguin": "Penguin"
+  "tabPenguin": "Penguin",
+  "onboardingWelcomeTitle": "Welcome to Habit Penguin!",
+  "onboardingWelcomeDescription": "Build better habits with fun and motivation. Track your daily tasks and level up!",
+  "onboardingFeature1Title": "Earn XP & Level Up",
+  "onboardingFeature1Description": "Complete tasks to earn experience points. The harder the task, the more XP you get!",
+  "onboardingFeature1Point1": "Easy tasks: 10 XP",
+  "onboardingFeature1Point2": "Medium tasks: 20 XP",
+  "onboardingFeature1Point3": "Hard tasks: 30 XP",
+  "onboardingFeature2Title": "Track Your Streaks",
+  "onboardingFeature2Description": "Build momentum by completing tasks every day. Maintain your streak to stay motivated!",
+  "onboardingFeature2Point1": "Daily task completion",
+  "onboardingFeature2Point2": "Customizable reminders",
+  "onboardingFeature2Point3": "Completion history",
+  "onboardingSampleTitle": "Ready to Start?",
+  "onboardingSampleDescription": "Would you like to start with sample tasks to see how it works?",
+  "onboardingCreateSampleTasks": "Create Sample Tasks",
+  "onboardingStartFromScratch": "Start from Scratch",
+  "onboardingNext": "Next",
+  "onboardingBack": "Back",
+  "emptyStateTitle": "Let's Add Your First Task",
+  "emptyStateDescription": "Tap the + button at the bottom right to create your first habit task.",
+  "emptyStateCreateTask": "Create First Task"
 }
